Made more changes

--- a/src/app/flight-tracker-dashboard/flight-tracker-dashboard.component.css
+++ b/src/app/flight-tracker-dashboard/flight-tracker-dashboard.component.css
@@ -19,10 +19,11 @@
   width: 100%;
   height: 3rem;
   display: flex;
+  padding: 1em 0.5em;
   position: absolute;
   align-items: center;
   pointer-events: none;
-  background: linear-gradient(black, rgba(0, 0, 0, 0));
+  background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0));
 }
 
 .navigation-bar svg {
@@ -45,22 +46,66 @@
 
 .search-field {
   padding: 0px 5px;
-  width: 100%;
+  width: 75%;
   height: 100%;
+  outline: none;
   color: White;
   display: block;
   font-weight: 600;
   border-radius: 4px;
   box-sizing: border-box;
-  border: 1px solid white;
+  border: 2px solid rgb(24, 23, 27);
   background-color: rgba(0, 0, 0, 0.566);
+  transition: all 0.3s;
+}
+
+.search-field:focus {
+  width: 100%;
+  border: 3px solid rgb(24, 22, 30);
+}
+
+.search-field:focus + .selection {
+  visibility: visible;
+  opacity: 1;
 }
 
 .selection {
-    margin: 0;
-    width: 100%;
-    border-radius: 5px;
-    margin-top: 0.5rem;
-    position: absolute;
-    background: white;
+  margin: 0;
+  opacity: 0;
+  width: 100%;
+  visibility: hidden;
+  border-radius: 5px;
+  margin-top: 0.5rem;
+  position: absolute;
+  background: white;
+  padding: 0.5em 0.5em;
+  transition: visibility 0.3s, opacity 0.5s linear;
+}
+
+.selection > h1 {
+  margin: 0;
+  font-size: 1.2em;
+}
+
+.list-container {
+  padding: 0;
+  max-height: 15em;
+  overflow-y: auto;
+  list-style-type: none;
+}
+
+.list-item {
+}
+
+.list-item:hover {
+  background: rgba(0, 0, 0, 0.1);
+}
+
+.list-item > button {
+  width: 100%;
+  height: 100%;
+  border: none;
+  padding: 0.5rem;
+  text-align: left;
+  background: transparent;
 }
